Twenty Thirteen: remove `box-sizing` styles from site wrapper element to avoid horizontal scrollbars in large viewports. Fixes #24599, props obenland.
git-svn-id: http://core.svn.wordpress.org/trunk@24513 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -770,9 +770,6 @@ img.wp-smiley,
 	background-color: #fff;
 	border-left: 1px solid #f2f2f2;
 	border-right: 1px solid #f2f2f2;
-	-webkit-box-sizing: content-box;
-	-moz-box-sizing:    content-box;
-	box-sizing:         content-box;
 	margin: 0 auto;
 	max-width: 1600px;
 	width: 100%;
